<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<!--    for the top menu items-->
    <group android:checkableBehavior="single" android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_books"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_myBooks" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_friends" />
<!--        <item-->
<!--            android:id="@+id/nav_tools"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="@string/menu_tools" />-->
    </group>

<!--    for the item which shows the progress of the reading challenge-->
    <item android:title="Reading Challenge" >
        <menu>
            <item
                android:id="@+id/nav_challenge_progress"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_challenge_progress" />
        </menu>
    </item>

<!--    for the items in the 3rd position which contains like explore, best books of  current year-->
    <group android:checkableBehavior="single" android:id="@+id/group2">
            <item
                android:id="@+id/nav_recomendations"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_recommendations" />
            <item
                android:id="@+id/nav_best_books"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_best_books" />
            <item
                android:id="@+id/nav_explore_books"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_explore" />
            <item
                android:id="@+id/nav_scan_books"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_scan_books" />
    </group>

<!--    for the item : settings & support -->
    <group android:checkableBehavior="single" android:id="@+id/group3">
        <item
            android:id="@+id/nav_settings_support"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_settings_support" />
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
